--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 						name="key" 
 						placeholder="Note title" 
 						id="key" 
-						v-model="key"
+						v-model.trim="key"
 						/>
 					<div class="suggested-results" v-if="matchedResults.length">
 						<ul class="results-list">
@@ -153,7 +153,7 @@
 						<textarea name="content" id="content" placeholder="Type markdown note here..." v-model="newNote.content"></textarea>
 					</div>
 					<div class="form-group create-note__btn-bar">
-						<button class="btn-preview" @click.prevent="previewNote">
+						<button class="btn-preview" @click.prevent="showView('preview')">
 							<i class="mdi mdi-note"></i>&nbsp;Notes
 						</button>
 						<button class="btn-create" @click.prevent="addNote">
@@ -318,6 +318,8 @@
 
 	<!--markedjs-->
 	<script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+	<!--sweetalert-->
+	<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 	<!-- moment -->
 	<script src="https://cdn.jsdelivr.net/npm/moment@2.26.0/moment.min.js"></script>
 	<script src="js/app.js" ></script>
